the-project/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      containers:
        - name: the-project
          image: akiracry/the-project:2.6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
      volumes:
        - name: cache-volume
          emptyDir: {}
