the-project/base/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.9-alpine
          ports:
            - containerPort: 4222
              name: client
            - containerPort: 8222
              name: http-monitor
          args:
            - "-js"
            - "-m"
            - "8222"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
