the-project/base/broadcaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broadcaster
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: broadcaster
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
