the-project/base/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
      protocol: TCP
      name: client
    - port: 8222
      targetPort: 8222
      protocol: TCP
      name: http-monitor
