the-project/base/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
